fix(header): display buttons on mobile

--- a/packages/theme-default/src/components/calendar/header/calendar-header.scss
+++ b/packages/theme-default/src/components/calendar/header/calendar-header.scss
@@ -82,7 +82,7 @@
 .sx__forward-backward-navigation {
   height: 45px;
 
-  .sx__is-calendar-small & {
-    display: none;
-  }
+  // .sx__is-calendar-small & {
+  //   display: none;
+  // }
 }
