--- a/packages/theme-default/src/components/calendar/header/today-button.scss
+++ b/packages/theme-default/src/components/calendar/header/today-button.scss
@@ -8,9 +8,9 @@
     background-color: var(--sx-internal-color-gray-ripple-background);
   }
 
-  .sx__is-calendar-small & {
-    display: none;
-  }
+  // .sx__is-calendar-small & {
+  //   display: none;
+  // }
 
   .sx__calendar-header & {
     border: var(--sx-border);
